# PIScO_Control_Center

./: .gitignore  .gitmodules  Yamlbase.yaml  app_default_settings.pickle  requirements.txt
ControlCenter/: .app_state.json  .envrc  .state.json  2  PIScO_Control_Center.json  __init__.py  app_settings.yaml  app_state.json  build.sh  client_test.py  docs.md  flake.nix  latest  latest-1-link  main.py  modules.cfg  modules.yaml  nohup.out  parser.py  run.sh  start_server.py  start_server.sh  test.py  test_backend.py  test_plot.py  test_server.sh  test_web.py  todo.md
ControlCenter/App/: App.py  LabelCheckboxComb.py  LabelEntryComb.py  LabelPathComb.py  __init__.py  app.py  command.py  helper.py  inputfile_writer.py  inputs.py  module.py  page.py  page_selector.py  settings.py  style.qss  styles.py  task.py  terminal.py
ControlCenter/Modules/: install.sh  run.sh
ControlCenter/Modules/BackgroundCorrection/: CMakeLists.txt  compile.sh  flake.nix  input.ini
ControlCenter/Modules/BackgroundCorrection/include/: reader.hpp
ControlCenter/Modules/BackgroundCorrection/src/: main.cpp
ControlCenter/Modules/BackgroundCorrectionModule/: CMakeLists.txt  compile.sh  flake.nix
ControlCenter/Modules/BackgroundCorrectionModule/include/: background_correction.hpp
ControlCenter/Modules/BackgroundCorrectionModule/src/: background_correction.cpp  correction.cpp  threads.cpp
ControlCenter/Modules/BackgroundCorrectionModule/testing/: input.ini  main.cpp
ControlCenter/Modules/FindContoursModule/: CMakeLists.txt
ControlCenter/Modules/FindContoursModule/src/: main.cpp  test_include.cpp  test_include.hpp
ControlCenter/Modules/SegmenterParallel/: .clangd  CMakeLists.txt  compile.sh  flake.nix  input.ini  run.sh  segmenter_cpy.cpp
ControlCenter/Modules/SegmenterParallel/src/: main.cpp  parser.cpp  parser.hpp  reader.cpp  reader.hpp  segmenter.cpp  segmenter.hpp  utils.cpp  utils.hpp  writer.cpp  writer.hpp
ControlCenter/Modules/ThreadManagerModule/: CMakeLists.txt  compile.sh  flake.nix
ControlCenter/Modules/ThreadManagerModule/include/: info.hpp  reader.hpp  threadmanager.hpp  threads  threads.hpp
ControlCenter/Modules/ThreadManagerModule/install/include/: utils.hpp
ControlCenter/Modules/ThreadManagerModule/src/: info.cpp  reader.cpp  threadmanager.cpp  threads  threads.cpp
ControlCenter/Modules/ThreadManagerModule/testing/: input.ini  main.cpp
ControlCenter/ProfileAnalysisServer/: client.py  server.py
ControlCenter/Server/: .modules.json  .server_state.json  Makefile  __init__.py  main.py  make  profile_analysis.py  start_server.sh
ControlCenter/TaskManagerServer/: .server_state.json  start_server.sh
ControlCenter/TestModules/: multicores.py
ControlCenter/Utils/: types.py
ControlCenter/dependencies/: flake.nix
ControlCenter/tmp/: Generate Crops_2025_3_8_16_21_24_input.ini  GenerateCrops_2025_3_12_11_11_21_input.ini  (+74 more)
Data_Analysis/: DigiSteert.py  analyze_profiles.py  flake.nix  load_profiles_from_database.ipynb  overall_analysis.ipynb  processing_pipeline.py
MaxSegmenter/: main.py
MaxSegmenterProcessPool/: Funktionsweise.md  bg_correction.py  bg_correction_old.py  deconvolution.py  deconvolution_old.py  detection.py  detection_old.py  lucyd.py  process_pool.py  profile_bg_corr_0.prof  profile_bg_corr_1.prof  profile_bg_corr_2.prof  profile_detection_0.prof  profile_detection_1.prof  profile_detection_10.prof  profile_detection_11.prof  profile_detection_12.prof  profile_detection_13.prof  profile_detection_14.prof  profile_detection_15.prof  profile_detection_2.prof  profile_detection_3.prof  profile_detection_4.prof  profile_detection_5.prof  profile_detection_6.prof  profile_detection_7.prof  profile_detection_8.prof  profile_detection_9.prof  profile_run_deconvolution_Thread-10 (profiled_run_deconvolution).prof  profile_run_reader_Thread-1 (profiled_run_reader).prof  profile_run_reader_Thread-45 (profiled_run_reader).prof  profile_thread_0.prof  profile_thread_1.prof  profile_thread_2.prof  profile_thread_3.prof  profile_thread_4.prof  profile_thread_5.prof  profile_thread_6.prof  profile_thread_7.prof  reader.py  (+3 more)
PISCOApp/: app.py  app_default_settings.pickle  camera_frame.py  converter.py  evaluation_frame.py  import_uuid.py  metadata_frame _tim.py  metadata_frame-back2.py  metadata_frame.py  metadata_frame_301123_works_0.5s.py  metadata_frame_backup.py  reformat_m181.py  segmenter_frame.py  sidebar.py
PISCO_DataGenerator/: generate_matrix.py
PISCO_Modules/FullSegmenter/: .clang-format  CMakeLists.txt  Makefile  build.sh  build_rocm.sh  compile_commands.json  extract_crops.py  flake.nix  install_AMD.sh  install_nocuda.sh  latest-1-link  lucyd.pt  run.sh  run_rocm.sh  settings.cfg
PISCO_Modules/FullSegmenter/.direnv/: flake-profile-24dce7078fdb38685aa388ae132734fd860f5d0d  flake-profile-24dce7078fdb38685aa388ae132734fd860f5d0d.rc
PISCO_Modules/FullSegmenter/.direnv/flake-inputs/: 41119f50cmp7wrc02jmkm8mlh34p0cfx-source  d4gvc9f79jbmzs4kbvmjw68wkph5qs2r-source  jaljw43ky60hd2p3whd7bh15sk883ajg-source
PISCO_Modules/FullSegmenter/Results/: M202_046-01_PISCO2_20240727-0334_Images-PNG.h5
PISCO_Modules/FullSegmenter/binDebug/: Segmenter
PISCO_Modules/FullSegmenter/dependencies/: flake.nix
PISCO_Modules/FullSegmenter/dependenciesAMD/: flake.nix
PISCO_Modules/FullSegmenter/dependenciesNoCuda/: flake.nix
PISCO_Modules/FullSegmenter/src/: background_correction.cpp  background_correction.hpp  deconvolution.cpp  deconvolution.hpp  detection.cpp  detection.hpp  error.cpp  error.hpp  main.cpp  parser.cpp  parser.hpp  reader.cpp  reader.hpp  segmenter.cpp  segmenter.hpp  types.cpp  types.hpp  writer.cpp  writer.hpp
PISCO_Pipeline/: Classify_ViT.py  Imageselector.py  Logfile_hist.py  So298-Fair_meta.py  Yamlbasenew.yaml  convert_imgs.py  make_video_from_profile.py  pipeline.py  pipeline_301123_works.py  plot_profile_logs.py  processing_pipeline.py  profile-partioner-1-10.py  single_pipe.py  single_pipe_test.py  single_pipe_tim.py
PiscoWebApp/: create_admin.py  create_user.py  database.db  flake.nix  main.py  start_server.sh
docs/: requirements.txt
(+207 files in other folders)
